fix: get subscribers
